2186.	[bug]		andrei
	Fixed interface redetection which had stopped working since
	Kea 2.3.6.
	(Gitlab #3017)

2185.	[func]		razvan
	Added extended log messages: DHCP4_DISCOVER, DHCP4_REQUEST,
	DHCP6_PROCESS_IA_NA_SOLICIT, DHCP6_PROCESS_IA_PD_SOLICIT, which
	include the hint address in the client request. The log message
	tag DHCP4_LEASE_ADVERT has been renamed to DHCP4_LEASE_OFFER.
	(Gitlab #2918)

2184.	[bug]		razvan
	Fixed a bug in evaluated expression parser which was not propelry
	handling escaped null characters.
	(Gitlab #3086)

2183.	[bug]		andrei
	Fixed a bug where one of the commands that retrieve statistic
	values sent to the kea-ctrl-agent would get an overflow error in
	the response if the inquired statistic was intended to have a big
	integer data type, and if the integer value would not be
	representable on 64 bits. Affected statistics are "total-nas" and
	"total-pds", and the bug only manifests if the inquired pool, or
	the inquired subnet's aggregated pool space, is large enough.
	Prior to this fix, commands would get a correct response over
	unix socket.
	(Gitlab #3068)

Kea 2.5.2 (development) released on September 27, 2023

2182.	[build]		razvan
	The library version numbers have been bumped up for the Kea 2.5.2
	development release.
	(Gitlab #3085)

2181.	[func]		razvan
	Added additional tokens which evaluate string expressions:
	"lcase" which converts to lower case and "ucase" which
	converts to upper case.
	(Gitlab #3048)

2180.	[build]		andrei
	Apart from enabling log4cplus's own logging, and adding more
	sanity checks in DNS code, the --enable-debug configure flag
	now also makes the compiler produce more abundant debugging
	information that can be read by a debugger.
	(Gitlab #1520)

2179.	[doc]		piotrek
	Updated Developer's Guide with information about new hook
	point "lease4_offer".
	(Gitlab #3067)

2178.	[doc]		andrei
	Clarified in the ARM that DHCPv6 clients with unstable DUIDs can