@@ -1321,7 +1321,8 @@
       // Type: binary
       {
         "code": 121,
-        // please mind the "single quotes inside of double quotes" syntax, when below convenience notation is used:
+        // please mind the "single quotes inside of double quotes" syntax, as well as "csv-format" set to false,
+        // when below convenience notation is used:
         // subnet1 - router1 IP addr, subnet2 - router2 IP addr, ..., subnetN - routerN IP addr
         "data": "'10.229.0.128/25 - 10.229.0.1, 10.198.122.47/32 - 10.198.122.1'",
         "csv-format": false,
